// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input demo -- input 1`] = `
.c24 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.jkCBpN .c23 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c22 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c22 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c22 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c22 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c22 input::-moz-placeholder {
  color: #abb4c3;
}

.c22 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c22 input::placeholder {
  color: #abb4c3;
}

.c22 input:hover {
  border-color: #4683e6;
}

.c22 input:focus {
  border-color: #4683e6;
}

.c22 .c23 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.jdTFqz .c23 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.hXAdRD .c23 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.dGmKux .c23 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        icon
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            circle-fill
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            circle
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            loading
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="c22"
    >
      <input />
      <span
        class="c23 c24"
      >
        <i
          class="icon__circle-fill "
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-disabled 1`] = `
.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e;
  color: #bbb;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c3 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c3 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c3 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c3 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c3 input::-moz-placeholder {
  color: #abb4c3;
}

.c3 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c3 input::placeholder {
  color: #abb4c3;
}

.c3 input:hover {
  border-color: #4683e6;
}

.c3 input:focus {
  border-color: #4683e6;
}

.c3 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
      disabled=""
    >
      <input
        disabled=""
      />
      <span
        class="c1 c2"
      >
        <i
          class="icon__circle "
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c3"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="icon__circle "
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-icon 1`] = `
.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.jkCBpN .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="icon__circle-fill "
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="icon__circle "
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="icon__loading "
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-size 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 22px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 .style__IconWrap-hppXiF {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c1 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c1 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c1 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
}

.c1 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 input::-moz-placeholder {
  color: #abb4c3;
}

.c1 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 input::placeholder {
  color: #abb4c3;
}

.c1 input:hover {
  border-color: #4683e6;
}

.c1 input:focus {
  border-color: #4683e6;
}

.c1 .style__IconWrap-hppXiF {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c2 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c2 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 34px;
}

.c2 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c2 input::-moz-placeholder {
  color: #abb4c3;
}

.c2 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c2 input::placeholder {
  color: #abb4c3;
}

.c2 input:hover {
  border-color: #4683e6;
}

.c2 input:focus {
  border-color: #4683e6;
}

.c2 .style__IconWrap-hppXiF {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <input />
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c1"
    >
      <input />
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c2"
    >
      <input />
    </span>
  </div>
</div>
`;

exports[`Input demo -- search 1`] = `
.c24 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c25 {
  cursor: pointer;
}

.jkCBpN .c23 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c22 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c22 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c22 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c22 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c22 input::-moz-placeholder {
  color: #abb4c3;
}

.c22 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c22 input::placeholder {
  color: #abb4c3;
}

.c22 input:hover {
  border-color: #4683e6;
}

.c22 input:focus {
  border-color: #4683e6;
}

.c22 .c23 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.jdTFqz .c23 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.hXAdRD .c23 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.dGmKux .c23 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

.cNkVVJ .c23 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.dRjpZH .c23 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="c22"
    >
      <input />
      <span
        class="c23 c24"
      >
        <i
          class="icon__search c25 "
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-disabled 1`] = `
.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c3 {
  cursor: pointer;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e;
  color: #bbb;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c4 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c4 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c4 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c4 input::-moz-placeholder {
  color: #abb4c3;
}

.c4 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c4 input::placeholder {
  color: #abb4c3;
}

.c4 input:hover {
  border-color: #4683e6;
}

.c4 input:focus {
  border-color: #4683e6;
}

.c4 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.jdTFqz .c1 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.hXAdRD .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.dGmKux .c1 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
      disabled=""
    >
      <input
        disabled=""
      />
      <span
        class="c1 c2"
      >
        <i
          class="icon__search c3 "
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c4"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="icon__search c3 "
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-size 1`] = `
.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c3 {
  cursor: pointer;
}

.jkCBpN .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c4 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c4 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c4 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c4 input::-moz-placeholder {
  color: #abb4c3;
}

.c4 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c4 input::placeholder {
  color: #abb4c3;
}

.c4 input:hover {
  border-color: #4683e6;
}

.c4 input:focus {
  border-color: #4683e6;
}

.c4 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.jdTFqz .c1 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.hXAdRD .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.dGmKux .c1 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 22px;
  padding-right: 22px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 .c1 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c5 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c5 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 34px;
  padding-right: 34px;
}

.c5 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c5 input::-moz-placeholder {
  color: #abb4c3;
}

.c5 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c5 input::placeholder {
  color: #abb4c3;
}

.c5 input:hover {
  border-color: #4683e6;
}

.c5 input:focus {
  border-color: #4683e6;
}

.c5 .c1 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="icon__search c3 "
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c4"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="icon__search c3 "
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c5"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="icon__search c3 "
        />
      </span>
    </span>
  </div>
</div>
`;
